--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <p id="server-time"></p>
     <table id="table-routes">
         <tr>
-            <th class="table-head">コース名</th>
+            <th class="table-head">ルートID</th>
             <!-- <th class="table-head">第一便出発時間</th>
             <th class="table-head">第二便出発時間</th> -->
-            <th class="table-head">備考</th>
+            <th class="table-head">ルート名</th>
         </tr>
     </table>
 </body>
