テーブル生成できるようにした

--- a/route-overview.html
+++ b/route-overview.html
@@ -13,7 +13,7 @@
     <table id="event-list-table">
         <tr>
             <th>イベントID</th>
-            <th>イベント名</th>
+            <th>ポイントID</th>
             <th>イベント発生時刻</th>
         </tr>
     </table>
