ルート名を表示できるように

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <p id="server-time"></p>
-    <table id="table-routes">
+    <table id="table-routes" align="center">
         <tr>
-            <th class="table-head">ルートID</th>
+            <th align="center">ルートID</th>
             <!-- <th class="table-head">第一便出発時間</th>
             <th class="table-head">第二便出発時間</th> -->
-            <th class="table-head">ルート名</th>
+            <th align="center">ルート名</th>
+            <th align="center">ルート詳細</th>
         </tr>
     </table>
 </body>
