--- a/route-overview.html
+++ b/route-overview.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <p id="query-params"></p>
+    <h1 id="route-name"></h1>
 
-    <table id="event-list-table">
+    <table id="event-list-table" align="center">
         <tr>
-            <th>イベントID</th>
-            <th>ポイントID</th>
-            <th>イベント発生時刻</th>
+            <th align="center">イベントID</th>
+            <th align="center">ポイントID</th>
+            <th align="center">イベント発生時刻</th>
         </tr>
     </table>
 </body>
