--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p id="debug-info-p">最終更新時刻</p>
         <p id="server-time"></p>
     </div>
-    <h1 id="page-title">WEB-CLIENT</h1>
+    <h1 id="page-title">Web-client</h1>
     <table id="table-routes" align="center">
         <tr>
             <th align="center">ルートID</th>
