--- a/route-overview.html
+++ b/route-overview.html
@@ -8,7 +8,11 @@
     <script src="/script/route_overview.js"></script>
 </head>
 <body>
-    <p id="query-params"></p>
+    <div id="debug-info">
+        <p>指定されたセッションID</p>
+        <p id="query-params"></p>
+    </div>
+
     <h1 id="route-name"></h1>
 
     <table id="event-list-table" align="center">
